fixed card spacing

--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   margin: 0 100px 0 0;
   max-width: 240px;
-  padding: 60px 0;
+  padding: 60px 0 0 0;
 }
 
 .cards__item:nth-child(3n) {
