--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -4,6 +4,6 @@
 .video {
   position: relative;
   margin-bottom: 0;
-  padding: 0;
+  padding: 100px 0 0 0;
   background-image: linear-gradient(white 87%, #f2f2f2 87%);
 }
